Overflow fix

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+    min-height: 100vh;
     padding: 1px;
 }
 
